--- a/index.html
+++ b/index.html
@@ -165,7 +165,18 @@
     </div>
 
     <div class="ad-banner">
-        <img src="https://via.placeholder.com/280x50?text=Your+Ad+Here" alt="광고 배너">
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5630503807789116"
+     crossorigin="anonymous"></script>
+<!-- 종혁사이트광고 -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-5630503807789116"
+     data-ad-slot="4398955176"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     </div>
 
     <div class="footer">무쌉만듬</div>
