--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>고급 메모장</title>
+    <meta name="google-site-verification" content="I2u5RZAh_IEb5k4mqVmu1uh99BXbliO7pN6Aw7z3JhQ" />
     <style>
         /* 배경 스타일 */
         body {
@@ -163,9 +164,9 @@
         <button class="button" id="executeButton" onclick="executeHTML()" style="display: none;">▶ HTML 실행</button>
         <div class="html-output" id="htmlOutput"></div>
     </div>
+    <meta name="google-site-verification" content="I2u5RZAh_IEb5k4mqVmu1uh99BXbliO7pN6Aw7z3JhQ" />
 
     <div class="ad-banner">
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5630503807789116"
      crossorigin="anonymous"></script>
 <!-- 종혁사이트광고 -->
 <ins class="adsbygoogle"
